--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "prettier --check .",
+    "format": "prettier --write .",
+    "prepare": "husky && git config --unset-all core.hooksPath && pre-commit install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format && git add -A ."
+    }
   },
   "dependencies": {
+    "eslint": "^9.1.1",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/plugin-transform-numeric-separator": "^7.18.6",
+    "husky": "^9.0.11",
+    "prettier": "3.2.5"
   },
   "private": true
 }
