--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,11 @@
 {
   "tabWidth": 2,
   "useTabs": false,
+  "singleQuote": true,
   "semi": true,
-  "singleQuote": false,
-  "trailingComma": "es5"
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "trailingComma": "es5",
+  "bracketSameLine": true,
+  "printWidth": 80
 }
