--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web",
     "lint": "prettier --check .",
     "format": "prettier --write .",
-    "prepare": "npm install husky && npx husky init",
-    "postinstall": "node --eval \"require('fs').writeFileSync('.husky/pre-commit', 'npm run format && git add -A .\\n')\""
+    "prepare": "husky",
+    "postinstall": "node --eval \"require('fs').writeFileSync('.husky/pre-commit', 'npx lint-staged .\\n')\""
   },
   "husky": {
     "hooks": {
@@ -18,7 +18,6 @@
     }
   },
   "dependencies": {
-    "eslint": "^9.1.1",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -26,8 +25,18 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-numeric-separator": "^7.18.6",
+    "@eslint/js": "^9.1.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.1.0",
     "husky": "^9.0.11",
     "prettier": "3.2.5"
+  },
+  "lint-staged": {
+    "**/*": [
+      "eslint --fix",
+      "prettier --write --ignore-unknown"
+    ]
   },
   "private": true
 }
