Add Format action. (#18)

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,8 +1,8 @@
 name: Format
 on:
-  # pull_request:
-  push:
-    # branches: [main]
+  pull_request:
+    # push:
+    branches: [main]
 
 jobs:
   format:
