--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     }
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/stack": "^6.3.29",
+    "@stripe/stripe-react-native": "^0.37.3",
     "axios": "^1.6.8",
     "expo": "^51.0.0",
     "expo-blur": "~13.0.2",
@@ -39,7 +41,7 @@
     "react-native-typography": "^1.4.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "stripe": "^15.5.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-numeric-separator": "^7.18.6",
