Implemented a login and logout functionality

--- a/app.json
+++ b/app.json
@@ -23,6 +23,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "supabaseUrl": "process.env.EXPO_PUBLIC_REACT_APP_SUPABASE_URL",
+      "supabaseAnonKey": "process.env.EXPO_PUBLIC_REACT_APP_SUPABASE_ANON_KEY"
+    },
+    "plugins": ["expo-secure-store"]
   }
 }
