--- a/package.json
+++ b/package.json
@@ -18,10 +18,25 @@
     }
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "@supabase/supabase-js": "^2.43.1",
+    "aes-js": "^3.1.2",
     "expo": "~50.0.17",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/plugin-transform-numeric-separator": "^7.18.6",
