--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     }
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
@@ -28,6 +29,7 @@
     "expo-notifications": "~0.28.1",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-collapsible": "^1.6.1",
@@ -35,11 +37,14 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mime-types": "^2.5.0",
     "react-native-modalize": "^2.1.1",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-swipeable": "^0.6.0",
     "react-native-typography": "^1.4.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "expo-av": "~14.0.3",
+    "expo-image-picker": "~15.0.4",
+    "expo-image-manipulator": "~12.0.3"
   },
   "devDependencies": {
     "@babel/plugin-transform-numeric-separator": "^7.18.6",
