--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@stripe/stripe-react-native": "^0.37.3",
+    "@supabase/supabase-js": "^2.43.1",
     "axios": "^1.6.8",
     "expo": "^51.0.0",
     "expo-blur": "~13.0.2",
@@ -30,6 +33,7 @@
     "expo-notifications": "~0.28.1",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-collapsible": "^1.6.1",
@@ -39,6 +43,7 @@
     "react-native-modalize": "^2.1.1",
     "react-native-swipeable": "^0.6.0",
     "react-native-typography": "^1.4.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "stripe": "^15.5.0"
