--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo": "^51.0.0",
     "expo-blur": "~13.0.2",
     "expo-contacts": "~13.0.3",
-    "expo-linear-gradient": "^13.0.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-notifications": "~0.28.1",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
