--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "^51.0.0",
+    "expo-av": "~14.0.3",
     "expo-blur": "~13.0.2",
     "expo-contacts": "~13.0.3",
+    "expo-image-manipulator": "~12.0.3",
+    "expo-image-picker": "~15.0.4",
     "expo-linear-gradient": "^13.0.2",
     "expo-notifications": "~0.28.1",
     "expo-permissions": "^14.4.0",
@@ -32,19 +35,19 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-collapsible": "^1.6.1",
     "react-native-elements": "^3.4.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mime-types": "^2.5.0",
     "react-native-modalize": "^2.1.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-swipeable": "^0.6.0",
     "react-native-typography": "^1.4.1",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1",
-    "expo-av": "~14.0.3",
-    "expo-image-picker": "~15.0.4",
-    "expo-image-manipulator": "~12.0.3"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-numeric-separator": "^7.18.6",
