Update prettier.yml to include devops/github-actions branch in the push event

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -2,7 +2,7 @@ name: Format
 on:
   pull_request:
     push:
-    branches: [main, dev]
+    branches: [main, dev, devops/github-actions]
 
 jobs:
   format:
