--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -2,7 +2,7 @@ name: Format
 on:
   pull_request:
   push:
-    branches: [main, dev, devops/github-actions]
+    branches: [main, dev]
 
 jobs:
   format:
