Update GitHub Actions workflow to trigger on push to main and dev branches (#18)

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,5 +1,7 @@
 name: update
-on: push
+on:
+  push:
+  branches: [main, dev]
 
 jobs:
   update:
@@ -28,7 +30,7 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: Install dependencies
-        run: yarn install
+        run: npm install
 
       - name: Install Prettier
-        run: yarn add prettier
+        run: npm i prettier
