Update pushes to main and dev (#18)

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,7 +1,8 @@
 name: update
 on:
+  pull_request:
   push:
-    branches: [main, dev, devops/github-actions]
+    branches: [main, dev]
 
 jobs:
   update:
