--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
-
     "@react-native-community/datetimepicker": "^8.0.1",
-
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.4",
     "@stripe/stripe-react-native": "^0.37.3",
     "@supabase/supabase-js": "^2.43.1",
     "axios": "^1.6.8",
@@ -35,7 +34,6 @@
     "expo-blur": "~13.0.2",
     "expo-contacts": "~13.0.3",
     "expo-image-manipulator": "~12.0.3",
-    "expo-image-picker": "~15.0.4",
     "expo-linear-gradient": "^13.0.2",
     "expo-notifications": "~0.28.1",
     "expo-permissions": "^14.4.0",
@@ -59,6 +57,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "stripe": "^15.5.0"
   },
   "devDependencies": {
