--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
     "@stripe/stripe-react-native": "^0.37.3",
     "@supabase/supabase-js": "^2.43.1",
     "axios": "^1.6.8",
