--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "prettier --check .",
     "format": "prettier --write .",
     "prepare": "husky",
-    "postinstall": "node --eval \"require('fs').writeFileSync('.husky/pre-commit', 'npx lint-staged .\\n')\""
+    "postinstall": "node --eval \"require('fs').writeFileSync('.husky/pre-commit', 'npx lint-staged .\\n')\"",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test2": "jest --testPathPattern=qa-tests/.*\\.test\\.js"
   },
   "husky": {
     "hooks": {
@@ -51,6 +53,7 @@
     "react-native-modalize": "^2.1.1",
     "react-native-paper": "^5.12.3",
     "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-swipeable": "^0.6.0",
     "react-native-typography": "^1.4.1",
@@ -62,10 +65,15 @@
   "devDependencies": {
     "@babel/plugin-transform-numeric-separator": "^7.18.6",
     "@eslint/js": "^9.1.1",
+    "@testing-library/react-native": "^12.5.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.1.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-expo": "^51.0.1",
     "prettier": "3.2.5"
   },
   "lint-staged": {
