--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "stripe": "^15.5.0",
-    "expo-file-system": "~17.0.1"
+    "expo-file-system": "~17.0.1",
+    "expo-sharing": "~12.0.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-numeric-separator": "^7.18.6",
