--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "expo-av": "~14.0.3",
     "expo-blur": "~13.0.2",
     "expo-contacts": "~13.0.3",
+    "expo-file-system": "~17.0.1",
     "expo-image-manipulator": "~12.0.3",
     "expo-image-picker": "~15.0.4",
     "expo-linear-gradient": "^13.0.2",
     "expo-notifications": "~0.28.1",
     "expo-permissions": "^14.4.0",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
@@ -58,9 +60,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "stripe": "^15.5.0",
-    "expo-file-system": "~17.0.1",
-    "expo-sharing": "~12.0.1"
+    "stripe": "^15.5.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-numeric-separator": "^7.18.6",
