--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     }
   },
   "dependencies": {
+    "@google/generative-ai": "^0.11.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-picker/picker": "^2.7.5",
@@ -51,11 +52,13 @@
     "react-native-elements": "^3.4.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mime-types": "^2.5.0",
+    "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-paper": "^5.12.3",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-swipeable": "^0.6.0",
+    "react-native-tooltip-menu": "^3.0.7",
     "react-native-typography": "^1.4.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-redux": "^9.1.2",
