--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "@stripe/stripe-react-native": "^0.37.3",
     "@supabase/supabase-js": "^2.43.1",
     "axios": "^1.6.8",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "^51.0.0",
     "expo-av": "~14.0.3",
     "expo-blur": "~13.0.2",
     "expo-contacts": "~13.0.3",
     "expo-file-system": "~17.0.1",
     "expo-image-manipulator": "~12.0.3",
-    "expo-image-picker": "~15.0.4",
+    "expo-image-picker": "~15.0.5",
     "expo-linear-gradient": "^13.0.2",
     "expo-notifications": "~0.28.1",
     "expo-permissions": "^14.4.0",
@@ -50,12 +51,15 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.1",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mime-types": "^2.5.0",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-paper": "^5.12.3",
     "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-reanimated": "^3.11.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-swipeable": "^0.6.0",
     "react-native-tooltip-menu": "^3.0.7",
