--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.1",
     "@google/generative-ai": "^0.11.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/blur": "^4.4.0",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-picker/picker": "^2.7.5",
     "@react-native-vector-icons/fontawesome5": "^5.15.4-alpha.12",
@@ -69,6 +70,7 @@
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.11.0",
     "react-native-select-dropdown": "^4.0.1",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.3.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-tooltip-menu": "^3.0.7",
