--- a/package.json
+++ b/package.json
@@ -77,7 +77,10 @@
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "stripe": "^15.5.0"
+    "stripe": "^15.5.0",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-numeric-separator": "^7.18.6",
