--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mime-types": "^2.5.0",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modalize": "^2.1.1",
     "react-native-paper": "^5.12.3",
     "react-native-raw-bottom-sheet": "^3.0.0",
