--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "redux-mock-store": "^1.5.4",
     "stripe": "^15.5.0"
   },
   "devDependencies": {
