--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "@supabase/supabase-js": "^2.43.1",
     "axios": "^1.6.8",
     "base64-arraybuffer": "^1.0.2",
+    "eas-cli": "^7.2.0",
     "emailjs-com": "^3.2.0",
-    "expo": "^51.0.0",
+    "expo": "^51.0.8",
     "expo-av": "~14.0.3",
     "expo-blur": "~13.0.2",
     "expo-contacts": "~13.0.3",
@@ -70,6 +71,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.11.0",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "^15.3.0",
