--- a/package.json
+++ b/package.json
@@ -6,16 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "prettier --check .",
-    "format": "eslint --fix && prettier --write .",
-    "prepare": "husky",
-    "postinstall": "node --eval \"require('fs').writeFileSync('.husky/pre-commit', 'npx lint-staged .\\n')\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run format && git add -A ."
-    }
+    "web": "expo start --web"
   },
   "dependencies": {
     "@emailjs/react-native": "^4.2.2",
@@ -35,28 +26,26 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.5",
-    "@stripe/stripe-react-native": "^0.37.3",
+    "@stripe/stripe-react-native": "0.37.2",
     "@supabase/supabase-js": "^2.43.1",
     "axios": "^1.6.8",
     "base64-arraybuffer": "^1.0.2",
-    "eas-cli": "^7.2.0",
     "emailjs-com": "^3.2.0",
-    "expo": "^51.0.8",
-    "expo-av": "~14.0.3",
+    "expo": "~51.0.26",
+    "expo-av": "~14.0.6",
     "expo-blur": "~13.0.2",
-    "expo-contacts": "~13.0.3",
+    "expo-contacts": "~13.0.5",
     "expo-file-system": "~17.0.1",
-    "expo-image-manipulator": "~12.0.3",
-    "expo-image-picker": "~15.0.5",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
-    "expo-notifications": "~0.28.1",
-    "expo-permissions": "^14.4.0",
+    "expo-notifications": "~0.28.15",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.5",
     "react-native-actionsheet": "^2.4.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.1",
@@ -70,11 +59,11 @@
     "react-native-modalize": "^2.1.1",
     "react-native-paper": "^5.12.3",
     "react-native-raw-bottom-sheet": "^3.0.0",
-    "react-native-reanimated": "^3.11.0",
-    "react-native-safe-area-context": "^4.10.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-step-indicator": "^1.0.3",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "15.2.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-tooltip-menu": "^3.0.7",
     "react-native-typography": "^1.4.1",
@@ -90,14 +79,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.1.0",
-    "husky": "^9.0.11",
     "prettier": "3.2.5"
-  },
-  "lint-staged": {
-    "**/*": [
-      "eslint --fix",
-      "prettier --write --ignore-unknown"
-    ]
   },
   "private": true
 }
