Add dev build config

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-av": "~14.0.6",
     "expo-blur": "~13.0.2",
     "expo-contacts": "~13.0.5",
+    "expo-dev-client": "~4.0.22",
     "expo-file-system": "~17.0.1",
     "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "~15.0.7",
